--- a/public/assets/stylesheets/theme-custom.css
+++ b/public/assets/stylesheets/theme-custom.css
@@ -1,1 +1,13 @@
 /* Add here all your CSS customizations */
+.form-group.purple-border {
+    height: 100%;
+    padding-left:40%;
+}
+.createarticle {
+    margin-top:10%;
+    margin-left:30%;
+}
+
+#article_category {
+    margin-left:30%;
+}
